--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,8 @@
 NotBlank={0} is mandatory
 NotNull={0} is mandatory
-PositiveOrZero={0} must be a greater or equal than zero value
+#PositiveOrZero={0} must be a greater or equal than zero value
+
+DeliveryTax.invalid={0} is invalid
 
 # Kitchen
 kitchen.name=Kitchen's name
