refs 9.16 Criando anotacao e validador customizado, para fins de didatica.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,8 +1,9 @@
 NotBlank={0} is mandatory
 NotNull={0} is mandatory
-#PositiveOrZero={0} must be a greater or equal than zero value
+#DeliveryTax.invalid={0} is invalid
+PositiveOrZero={0} must be a greater or equal than zero value
+Multiple={0} is not a multiple of {1}
 
-DeliveryTax.invalid={0} is invalid
 
 # Kitchen
 kitchen.name=Kitchen's name
