--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,6 +3,7 @@ NotNull={0} is mandatory
 #DeliveryTax.invalid={0} is invalid
 PositiveOrZero={0} must be a greater or equal than zero value
 Multiple={0} is not a multiple of {1}
+ValueZeroIncludesDescription={1} should contain {2}
 
 
 # Kitchen
